silence GCC warning: ignoring attributes on template argument

See also: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=71463